# OGRE-Projects

./: .gitignore  README.md
Basic-Engine-Demo/: .README.md.kate-swp  CMakeLists.txt  README.md  plugins.cfg  resources.cfg
Basic-Engine-Demo/CMakeModules/: FindOIS.cmake
Basic-Engine-Demo/Debug/: makefile
Basic-Engine-Demo/inc/: aspect.h  engine.h  entity.h  entityMgr.h  gameMgr.h  gfxMgr.h  inputMgr.h  main.h  mgr.h  uiMgr.h  utils.h
Basic-Engine-Demo/src/: aspect.cpp  engine.cpp  entity.cpp  entityMgr.cpp  gameMgr.cpp  gfxMgr.cpp  inputMgr.cpp  main.cpp  mgr.cpp  uiMgr.cpp  utils.cpp
Solar-System/: CMakeLists.txt  README.md  config.h.in  plugins.cfg  resources.cfg
Solar-System/meshes/Earth/: Earth.scene  PlanetMaterial.material
Solar-System/meshes/Jupiter/: Jupiter.scene  PlanetMaterial.material
Solar-System/meshes/Mars/: Mars.scene  PlanetMaterial.material  Sphere.mesh
Solar-System/meshes/Mercury/: Mercury.scene  PlanetMaterial.material
Solar-System/meshes/Moon/: Moon.scene  PlanetMaterial.material
Solar-System/meshes/Neptune/: Neptune.scene  NeptuneRing.material  NeptuneRing.mesh  PlanetMaterial.material
Solar-System/meshes/Pluto/: PlanetMaterial.material  Pluto.scene  Sphere.mesh
Solar-System/meshes/Saturn/: PlanetMaterial.material  RingMaterial.material  Saturn.scene  Torus.mesh
Solar-System/meshes/Sun/: PlanetMaterial.material  Sphere.mesh  Sun.scene
Solar-System/meshes/Uranus/: PlanetMaterial.material  Uranus.scene
Solar-System/meshes/Venus/: PlanetMaterial.material  Venus.scene
Solar-System/src/: main.cpp
(+1 files in other folders)
