CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(Solar)

# Find packages
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMakeModules")
# SET(OGRE_DIR /snap/ogre/216/lib/OGRE/cmake)	# uncomment if you installed OGRE via snap
FIND_PACKAGE(OGRE REQUIRED COMPONENTS Bites RTShaderSystem)

INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRS})
LINK_DIRECTORIES(${OGRE_LIBRARY_DIRS})

# uncomment if you want to use OGRE's default resources
# FILE(COPY ${OGRE_CONFIG_DIR}/plugins.cfg ${OGRE_CONFIG_DIR}/resources.cfg
	# DESTINATION ${CMAKE_BINARY_DIR})

FILE(COPY ${PROJECT_SOURCE_DIR}/plugins.cfg ${PROJECT_SOURCE_DIR}/resources.cfg
    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
	
SET(INCLUDES ${PROJECT_SOURCE_DIR}/inc)
INCLUDE_DIRECTORIES(${INCLUDES})

FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

ADD_CUSTOM_TARGET("${PROJECT_NAME}_SUCCESSFUL" ALL
	DEPENDS ${PROJECT_NAME}
	COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/meshes ${CMAKE_CURRENT_BINARY_DIR}/meshes
	COMMAND ${CMAKE_COMMAND} -E echo "Compile Complete!"
	)
	
TARGET_LINK_LIBRARIES(${PROJECT_NAME} OgreBites ${OIS_LIBRARIES}) 
